@@ -987,27 +987,27 @@ int32_t SPVM_RUNTIME_API_call_sub_vm(SPVM_ENV* env, int32_t sub_id, SPVM_VALUE* 
         break;
       case SPVM_OPCODE_C_ID_LEFT_SHIFT_INT:
         int_vars[opcode->operand0]
-          = int_vars[opcode->operand1] << (int_vars[opcode->operand2] & 0x1f);
+          = int_vars[opcode->operand1] << int_vars[opcode->operand2];
         break;
       case SPVM_OPCODE_C_ID_LEFT_SHIFT_LONG:
         long_vars[opcode->operand0]
-          = long_vars[opcode->operand1] << (int_vars[opcode->operand2] & 0x3f);
+          = long_vars[opcode->operand1] << int_vars[opcode->operand2];
         break;
       case SPVM_OPCODE_C_ID_RIGHT_SHIFT_INT:
         int_vars[opcode->operand0]
-          = int_vars[opcode->operand1] >> (int_vars[opcode->operand2] & 0x1f);
+          = int_vars[opcode->operand1] >> int_vars[opcode->operand2];
         break;
       case SPVM_OPCODE_C_ID_RIGHT_SHIFT_LONG:
         long_vars[opcode->operand0]
-          = long_vars[opcode->operand1] >> (int_vars[opcode->operand2] & 0x3f);
+          = long_vars[opcode->operand1] >> int_vars[opcode->operand2];
         break;
       case SPVM_OPCODE_C_ID_RIGHT_SHIFT_UNSIGNED_INT:
         int_vars[opcode->operand0]
-          = (int32_t)((uint32_t)int_vars[opcode->operand1] >> (int_vars[opcode->operand2] & 0x1f));
+          = (int32_t)((uint32_t)int_vars[opcode->operand1] >> int_vars[opcode->operand2]);
         break;
       case SPVM_OPCODE_C_ID_RIGHT_SHIFT_UNSIGNED_LONG:
         long_vars[opcode->operand0]
-          = (int64_t)((uint64_t)long_vars[opcode->operand1] >> (int_vars[opcode->operand2] & 0x3f));
+          = (int64_t)((uint64_t)long_vars[opcode->operand1] >> int_vars[opcode->operand2]);
         break;
       case SPVM_OPCODE_C_ID_BIT_AND_INT:
         int_vars[opcode->operand0]
