@@ -2,6 +2,7 @@
   - Change SPVM::Bool to SPVM::JSON::Bool
   - rename interface descriptor to interface_t
   - remove floating point x % y
+  - shift operation right operand is used directory
 0.0406 2018-01-04
   - add signbit CORE func
   - add signbitf CORE func
